# simpel_captcha

./: .gitignore  LICENSE  README.MD  README.md  pyproject.toml
example/: main.py
simpel_captcha/: src.py
