[tool.poetry]
name = "simpel_captcha"
version = "0.1.4"
description = "FastAPI or starlette 生成验证码(图片/文字) 提供 io/ base64/ 本地文件存储方式"
authors = ["柒意 <396667207@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zy7y/simpel_captcha"
repository = "https://github.com/zy7y/simpel_captcha"
keywords = ["FastAPI", "captcha", "starlette", "simpel", "easy", "base64"]

[tool.poetry.dependencies]
python = "^3.6"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
